--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@nguniversal/common": "^5.0.0-beta.5",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
-    "@progress/kendo-angular-buttons": "3.0.2",
+    "@progress/kendo-angular-buttons": "^3.0.3",
     "@progress/kendo-angular-l10n": "^1.0.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
