--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@nguniversal/common": "^5.0.0-beta.5",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@progress/kendo-angular-dropdowns": "^2.0.2",
+    "@progress/kendo-angular-l10n": "^1.0.7",
+    "@progress/kendo-theme-default": "^2.48.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
